Tests/CompilerTests/negative/no-given-1.diagnostics.expected
negative/no-given-1.hylo:14.3-4: error: no coercion from 'Q<A> ==> [Void]() let -> Void' to '[Void]() let -> Void'
  f()
  ^
negative/no-given-1.hylo:14.3-4: note: no given instance of 'Q<A>' in this scope
  f()
  ^
negative/no-given-1.hylo:19.3-4: error: no coercion from 'Q<A> ==> [Void]() let -> Void' to '[Void]() let -> Void'
  f()
  ^
negative/no-given-1.hylo:19.3-4: note: no given instance of 'Q<A>' in this scope
  f()
  ^
negative/no-given-1.hylo:23.3-4: error: no coercion from '<T> P<T> ==> [Void](let T) let -> Void' to '[Void](let Void) let -> Void'
  i(())
  ^
negative/no-given-1.hylo:23.3-4: note: no given instance of 'P<Void>' in this scope
  i(())
  ^
